--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Audiophile</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
     <div id="root"></div>
